--- a/frontend/src/pages/services/index.astro
+++ b/frontend/src/pages/services/index.astro
@@ -265,7 +265,7 @@ const schemaData = {
           </ul>
         </div>
         <div class="rounded-2xl aspect-video overflow-hidden shadow-xl">
-          <img src="/images/gimos-roofing-company-van-jobsite.jpg" alt="Gimo's Roofing company van at job site" class="w-full h-full object-cover" />
+          <img src="/images/gimos-roofing-company-van-jobsite.webp" alt="Gimo's Roofing company van at job site" class="w-full h-full object-cover" />
         </div>
       </div>
     </div>
